doc: fix wrong type and typo

--- a/genindex.html
+++ b/genindex.html
@@ -333,7 +333,7 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#decanter.core.jobs.task.UploodTask.file">file (decanter.core.jobs.task.UploodTask attribute)</a>
+      <li><a href="api.html#decanter.core.jobs.task.UploadTask.file">file (decanter.core.jobs.task.UploadTask attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -653,7 +653,7 @@
 </li>
         <li><a href="api.html#decanter.core.jobs.task.TrainTSTask.run">(decanter.core.jobs.task.TrainTSTask method)</a>
 </li>
-        <li><a href="api.html#decanter.core.jobs.task.UploodTask.run">(decanter.core.jobs.task.UploodTask method)</a>
+        <li><a href="api.html#decanter.core.jobs.task.UploadTask.run">(decanter.core.jobs.task.UploadTask method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -840,7 +840,7 @@
       </ul></li>
       <li><a href="api.html#decanter.core.client.CoreClient.upload">upload() (decanter.core.client.CoreClient static method)</a>
 </li>
-      <li><a href="api.html#decanter.core.jobs.task.UploodTask">UploodTask (class in decanter.core.jobs.task)</a>
+      <li><a href="api.html#decanter.core.jobs.task.UploadTask">UploadTask (class in decanter.core.jobs.task)</a>
 </li>
       <li><a href="api.html#decanter.core.context.Context.USERNAME">USERNAME (decanter.core.context.Context attribute)</a>
 </li>
